Setup local TLD based on webs ID, and resolve using DNSMasq

--- a/spec/fixtures/dev.dnsmasq.plist
+++ b/spec/fixtures/dev.dnsmasq.plist
@@ -8,7 +8,7 @@
     <key>Boxen</key>
     <dict>
       <key>Description</key>
-      <string>Redirects *.dev DNS requests to localhost.</string>
+      <string>Redirects personal TLD entry DNS requests to localhost.</string>
     </dict>
 
     <key>ProgramArguments</key>
